--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4608,6 +4608,9 @@ header.main-header .header-sticky.active{
 }
 
 @media only screen and (max-width: 767px){
+	.logo-viral {
+    height: 30px;
+}
 	.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
     display: flex
 ;
