--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4608,6 +4608,11 @@ header.main-header .header-sticky.active{
 }
 
 @media only screen and (max-width: 767px){
+	
+.btn-default{
+	
+	font-size: 14px;
+}
 	.logo-viral {
     height: 30px;
 }
@@ -4622,7 +4627,7 @@ header.main-header .header-sticky.active{
 
 
 	.btn-default{
-		padding: 15px 55px 15px 15px;
+		padding: 10px 55px 10px 15px;
 	}
 
 	.btn-default::before{
